# jellyfin-plugin-magazines

./: .gitignore  Jellyfin.Plugin.Magazines.sln  README.md  build.yaml
.github/workflows/: changelog.yaml  scan-codeql.yaml
Jellyfin.Plugin.Magazines/: Jellyfin.Plugin.Magazines.csproj  Plugin.cs
Jellyfin.Plugin.Magazines/Configuration/: PluginConfiguration.cs  configPage.html
Jellyfin.Plugin.Magazines/Providers/: XmpReader.cs
Jellyfin.Plugin.Magazines/Providers/Pdf/: PdfMetadataImageProvider.cs  PdfMetadataProvider.cs  PdfUtils.cs
scripts/: pyproject.toml  xmptag.py
